# campus_patrol_robot

./: .gitignore  README.md
Industrial_computer_mid_70/: nav.sh
Industrial_computer_mid_70/src/time_sync/: CMakeLists.txt  package.xml
Industrial_computer_mid_70/src/time_sync/include/time_sync/: time_sync.hpp
Industrial_computer_mid_70/src/time_sync/launch/: time_sync.launch.py
Industrial_computer_mid_70/src/time_sync/src/: time_sync.cpp
os开发/HARDWARE/inc/: usart.h
os开发/HARDWARE/src/: usart.c
os开发/MDK/: main.c  project.uvguix.CMLY  project.uvoptx  project.uvprojx  robot.c  robot.h
os开发/MDK/Listings/: project.map  startup_stm32f40_41xxx.lst
os开发/MDK/Objects/: can.crf  canrecive.crf  croutine.crf  delay.crf  event_groups.crf  heap_4.crf  list.crf  main.crf  misc.crf  pid.crf  port.crf  project.axf  project.build_log.htm  project.htm  project.lnp  project_Target 1.dep  queue.crf  remote_control.crf  robot.crf  ros_to_stm32.crf  stm32f4xx_adc.crf  stm32f4xx_can.crf  stm32f4xx_crc.crf  stm32f4xx_cryp.crf  stm32f4xx_cryp_aes.crf  stm32f4xx_cryp_des.crf  stm32f4xx_cryp_tdes.crf  stm32f4xx_dac.crf  stm32f4xx_dbgmcu.crf  stm32f4xx_dcmi.crf  stm32f4xx_dma.crf  stm32f4xx_dma2d.crf  stm32f4xx_exti.crf  stm32f4xx_flash.crf  stm32f4xx_flash_ramfunc.crf  stm32f4xx_fsmc.crf  stm32f4xx_gpio.crf  stm32f4xx_hash.crf  stm32f4xx_hash_md5.crf  stm32f4xx_hash_sha1.crf  (+21 more)
os开发/USER/: const.h
os开发/USER/APP/: canrecive.c  (+4 more)
xiao_ying/install/: setup.sh
上位机/install/: local_setup.sh  setup.sh
上位机/log/: latest_build  latest_list
巡逻车231005/20231005_fv/: .gitignore  README.md
(+100 files in other folders)
